compiler/tools/fpp-check/test/state_machine/typed_elements/sm_choice_bad_guard_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/sm_choice_bad_guard_type.fpp:4.17
  choice C { if g enter S else enter S }
                ^
error: type mismatch at choice
type of choice is None
type of guard is U32
